--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,144 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Inter, sistem-ui, Avenir, Helverica, Arial, sans-serif;
+  font-weight: 400;
+  margin: 0;
   text-align: center;
+  padding-bottom: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h2 {
+  font-size: 30px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h1 {
+  font-size: 60px;
+}
+
+.imgHome {
+  width: 250px;
+  height: 175px;
+}
+
+.post {
+  box-shadow: 0 0 5px grey;
+  width: 50vw;
+  margin-top: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .post {
+    gap: 5px;
+    width: 80vw;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.imgPost {
+  width: 330px;
+  height: 225px;
+}
+
+.postContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.commentContainer {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+@media only screen and (max-width: 500px) {
+  .commentContainer {
+    gap: 5px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header {
+  margin: 0;
 }
 
-.card {
-  padding: 2em;
+.dateContainer {
+  padding-left: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.commentPadding {
+  padding-right: 5px;
+}
+
+.comment {
+  border-bottom: solid;
+  border-width: 0.1px;
+  text-align: left;
+  padding-left: 50px;
+  padding-bottom: 20px;
+}
+
+.postPadding {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+}
+
+.noComments {
+  padding-bottom: 30px;
+}
+
+label > p {
+  font-weight: bold;
+  font-size: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+input {
+  border-radius: 7px;
+  font-size: 20px;
+}
+
+.submitContainer {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+.commentSubmit {
+  width: 200px;
+  font-size: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.headerContainer {
+  background-color: grey;
+  padding-bottom: 20px;
+  border-bottom: solid;
+  border-width: 0.1px;
+}
+
+.postTitle {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+form {
+  padding-top: 10px;
+}
+
+.commentPad {
+padding-top: 30px;
+}
+
+.commentsContainer {
+  margin-bottom: 20px;
 }
